fix icons displayed ofr Oxygen